Testimonials Fix (not complete)

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     <h2 class="section-heading text-uppercase">Avaliações dos Nossos Clientes</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
-                <div class="row g-lg-2">
+                <div class="row g-2">
                     <div class="col-lg-6 costumer-testimonial">
                         <div class="row">
                             <img class="col-4" src="assets/img/costumers/rafael-almeida.png" alt="costumer-portrait">
@@ -254,7 +254,7 @@
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-regular fa-star"></i>
                             </div>
                         </div>
                         <div class="text-justify">
