--- a/orders.html
+++ b/orders.html
@@ -28,7 +28,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="/index.html">Sobre Nós</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/index.html#about">Sobre Nós</a></li>
                         <li class="nav-item"><a class="nav-link" href="/index.html#portfolio">Produtos</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle">Blog</a>
