Revert CSS changes

--- a/gallery.html
+++ b/gallery.html
@@ -45,6 +45,7 @@ subpage-template.html<!DOCTYPE html>
                 <div class="nav-item"><button id="color-scheme" class="nav-link icon fa-solid fa-sun" onclick="toggle_light_mode()"></button></div>
             </div>
         </nav>
+        <div class="navbar-spacer"></div>
         <!-- gallery-->
         <section class="page-section" id="gallery">
             <div class="container">
