--- a/news.html
+++ b/news.html
@@ -45,6 +45,7 @@
                 <div class="nav-item"><button id="color-scheme" class="nav-link icon fa-solid fa-sun" onclick="toggle_light_mode()"></button></div>
             </div>
         </nav>
+        <div class="navbar-spacer"></div>
         <!-- news-->
         <section class="page-section" id="news">
             <div class="container">
