--- a/subpage-template.html
+++ b/subpage-template.html
@@ -45,6 +45,7 @@
                 <div class="nav-item"><button id="color-scheme" class="nav-link icon fa-solid fa-sun" onclick="toggle_light_mode()"></button></div>
             </div>
         </nav>
+        <div class="navbar-spacer"></div>
         <!-- CHANGE_FOR_THE_NAME_HERE-->
         <section class="page-section" id="INSERT_ID_HERE">
             <div class="container">
