Added Google Analytics support

--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet"/>
         <link href="css/custom-styles.css" rel="stylesheet"/>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-T6QWHKVYBT"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-T6QWHKVYBT');
+        </script>
     </head>
     <body id="page-top" class="light-mode">
         <!-- Navigation-->
