Created Order Form

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                             </div>
                         </div>
                         <div class="text-justify">
-                            Produtos sem gluten e sem proteína de leite, não havendo contaminação cruzada.
+                            Produtos sem glúten e sem proteína de leite, não havendo contaminação cruzada.
                             Pão de aveia, pão de alfarroba e broa de milho muito bons.
                             A tarte de maçã é uma delícia!
                             Aconselho vivamente!
