--- a/orders.html
+++ b/orders.html
@@ -16,6 +16,7 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet"/>
         <link href="css/custom-styles.css" rel="stylesheet"/>
+
     </head>
     <body id="page-top" class="light-mode">
         <!-- Navigation-->
@@ -51,12 +52,64 @@
             <div class="container">
                 <div class="text">
                     <h2 class="section-heading text-uppercase">Encomendas</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Peça aqui a sua encomenda da nossa loja direto para sua casa.</h3>
                 </div>
-                <div class="row">
-                    COLOCAR O CONTEÚDO AQUI!
+                
+                <div class="container mt-5 mb-5 d-flex justify-content-center">
+                    <div class="card px-1 py-4">
+                        <div class="card-body">
+                            <h5 class="card-title mb-3">Formato da Encomenda</h5>
+                            <div class="d-flex flex-row">
+                                <label class="radio">   
+                                    <input type="radio" name="add" value="takeaway"> <span> <i class="fa fa-truck"></i> Take Away </span> 
+                                </label>
+                                &ensp;
+                                <label class="radio">
+                                    <input type="radio" name="add" value="home"> <span> <i class="fa fa-home"></i> Entrega ao Domícilio </span> 
+                                </label> 
+                            </div>
+                            <h6 class="information mt-4">Introduza os seus dados para completar a encomenda:</h6>
+                            <div class="row">
+                                <div class="col-sm-12">
+                                    <div class="form-group">
+                                        <input class="form-control" type="text" placeholder="Nome"> 
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-sm-12">
+                                    <div class="form-group">
+                                        <input class="form-control" type="text" placeholder="Email">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-sm-12">
+                                    <div class="form-group">
+                                        <input class="form-control" type="text" placeholder="Nº Telemóvel">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-sm-12">
+                                    <div class="form-group">
+                                        <textarea class="textarea resize-ta" type="text" placeholder="Descrição da Encomenda"></textarea>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class=" d-flex flex-column px-1 mt-3 mb-3"> 
+                                <br>
+                                <div>
+                                    <input type="checkbox">
+                                    <label class="agree-text">Li e aceito os </label>
+                                    <a href="https://eur-lex.europa.eu/legal-content/PT/TXT/PDF/?uri=CELEX:32016R0679" class="terms">Termos e Condições</a> 
+                                </div>
+                            </div>
+                            <button class="btn btn-primary btn-block confirm-button">Confirmar encomenda</button>
+                        </div>
+                    </div>
                 </div>
-            </div>
+
         </section>
         <!-- Footer-->
         <footer class="footer py-4">
