Fixed missing </div>

--- a/orders.html
+++ b/orders.html
@@ -109,7 +109,7 @@
                         </div>
                     </div>
                 </div>
-
+            </div>
         </section>
         <!-- Footer-->
         <footer class="footer py-4">
