--- a/orders.html
+++ b/orders.html
@@ -88,7 +88,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-sm-12">
-                                    <div class="form-group">
+                                    <div class="form-group text-muted">
                                         <input class="form-control" id="phone" type="number" placeholder="Nº Telemóvel">
 
                                         <script>
