--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                     <h3 class="section-subheading text-muted"></h3>
                 </div>
                 <div class="row">
-                    <div class="col mb-4 text-justify">
+                    <div class="col text-justify">
                         <div class="contact">
                             <div class="info">
                                 <div class="address">
