Removed muted-texts from sections

--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
         <section class="page-section" id="about">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Sobre Nós</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase mb-4">Sobre Nós</h2>
                 </div>
                 <div class="row">
                     <div class="text-justify col-md-8 mb-4">
@@ -190,8 +189,7 @@
         <section class="page-section" id="testimonials">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Avaliações dos Nossos Clientes</h2>
-                    <h3 class="section-subheading text-muted"></h3>
+                    <h2 class="section-heading text-uppercase mb-5">Avaliações dos Nossos Clientes</h2>
                 </div>
                 <div class="row g-2">
                     <div class="col-lg-6 costumer-testimonial">
@@ -278,8 +276,7 @@
         <section class="page-section" id="contact">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Contacte-nos</h2>
-                    <h3 class="section-subheading text-muted"></h3>
+                    <h2 class="section-heading text-uppercase mb-5">Contacte-nos</h2>
                 </div>
                 <div class="row">
                     <div class="col text-justify">
