--- a/index.html
+++ b/index.html
@@ -283,14 +283,13 @@
                         <div class="contact">
                             <div class="info">
                                 <div class="address">
-                                  <i class="bi bi-geo-alt"></i>
+                                  <i class="fa-solid fa-phone" ></i>
                                   <h4>Morada:</h4>
                                   <p>R.Alão de Morais n.º 548 R\c Esq <br>
                                     3700-021 São João da Madeira, Portugal</p>
                                 </div>
                   
                                 <div class="open-hours">
-                                  <i class="bi bi-clock"></i>
                                   <h4>Horário:</h4>
                                   <p>
                                     Quinta-Sábado:<br>
@@ -305,7 +304,7 @@
                                 </div>
                   
                                 <div class="phone">
-                                  <i class="bi bi-phone"></i>
+                                  <i class="fa-solid fa-phone"></i>
                                   <h4>Telefone:</h4>
                                   <p>+315 914 504 607</p>
                                 </div>
