Gallery Template (Incomplete)

--- a/gallery.html
+++ b/gallery.html
@@ -54,7 +54,86 @@ subpage-template.html<!DOCTYPE html>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
                 <div class="row">
-                    COLOCAR O CONTEÚDO AQUI!
+                    <div class="col-md-2" style="position: fixed;">
+                        <h5 style="text-align: center">Categorias</h5>
+                        </br>
+                        <ul class="nav nav-pills flex-column">
+                            <li class="nav-item">
+                              <a class="nav-link" href="#category1">Categoria 1</a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link" href="#category2">Categoria 2</a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link" href="#category3">Categoria 3</a>
+                            </li>
+                          </ul>
+                    </div>
+                    <div class="col-md-10" style="margin-left: 300px">
+                        <h5 style="text-align: center">Imagens</h5>
+                        </br>
+                        <h6 class="sector" id="#category1">Categoria 1</h6>
+                        </br>
+                        <div class="gallerygrid">
+                            <div class="imagebox">
+                              <img class="image" src="https://picsum.photos/222/200">
+                            </div>
+                            <div class="imagebox">
+                              <img class="image" src="https://picsum.photos/200/200">
+                            </div>
+                            <div class="imagebox">
+                              <img class="image" src="https://picsum.photos/200/150">
+                            </div>
+                            <div class="imagebox">
+                              <img class="image" src="https://picsum.photos/221/200">
+                            </div>
+                            <div class="imagebox">
+                              <img class="image" src="https://picsum.photos/200/230">
+                            </div>
+                        </div>
+
+                    </br>
+                    <h6 class="sector" id="category2">Categoria 2</h6>
+                    </br>
+                    <div class="gallerygrid">
+                        <div class="imagebox">
+                          <img class="image" src="https://picsum.photos/222/200">
+                        </div>
+                        <div class="imagebox">
+                          <img class="image" src="https://picsum.photos/200/200">
+                        </div>
+                        <div class="imagebox">
+                          <img class="image" src="https://picsum.photos/200/150">
+                        </div>
+                        <div class="imagebox">
+                          <img class="image" src="https://picsum.photos/221/200">
+                        </div>
+                        <div class="imagebox">
+                          <img class="image" src="https://picsum.photos/200/230">
+                        </div>
+                    </div>
+
+                </br>
+                <h6 class="sector" id="category3">Categoria 3</h6>
+                </br>
+                <div class="gallerygrid">
+                    <div class="imagebox">
+                      <img class="image" src="https://picsum.photos/222/200">
+                    </div>
+                    <div class="imagebox">
+                      <img class="image" src="https://picsum.photos/200/200">
+                    </div>
+                    <div class="imagebox">
+                      <img class="image" src="https://picsum.photos/200/150">
+                    </div>
+                    <div class="imagebox">
+                      <img class="image" src="https://picsum.photos/221/200">
+                    </div>
+                    <div class="imagebox">
+                      <img class="image" src="https://picsum.photos/200/230">
+                    </div>
+                </div>
+
                 </div>
             </div>
         </section>
