Modal is almost finished

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                     <div class="modal-content">
                         <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
                         <div class="row justify-content-center">
-                            <div class="col mx-4">
+                            <div class="col mx-md-4 mx-sm-1">
                                 <div class="modal-body">
                                     <h2 class="text-uppercase mb-5">Project Name</h2>
                                     <div class="row">
