Modal is almost finished

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
         <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="container h-100">
                 <div class="modal-dialog modal-dialog-centered">
-                    <div class="modal-content">
+                    <div class="modal-content light-mode">
                         <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
                         <div class="row justify-content-center">
                             <div class="col mx-md-4 mx-sm-1">
