--- a/index.html
+++ b/index.html
@@ -49,9 +49,10 @@
                         </li>
                         <li class="nav-item"><a class="nav-link" href="/orders.html">Encomendas</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contactos</a></li>
+                        <li class="nav-item d-flex align-items-center"><button id="color-scheme" class="nav-link icon fa-solid fa-sun" onclick="toggle_light_mode()"></button></li>
+
                     </ul>
                 </div>
-                <div class="nav-item"><button id="color-scheme" class="nav-link icon fa-solid fa-sun" onclick="toggle_light_mode()"></button></div>
             </div>
         </nav>
         <!-- Masthead-->
