Added Sónia Costa

--- a/index.html
+++ b/index.html
@@ -195,9 +195,9 @@
                 <div class="row g-2">
                     <div class="col-lg-6 costumer-testimonial">
                         <div class="row">
-                            <img class="col-4" src="assets/img/costumers/rafael-almeida.png" alt="costumer-portrait">
+                            <img class="col-4" src="assets/img/costumers/sonia-costa.png" alt="costumer-portrait">
                             <div class="col-8">
-                                <div class="h4">Sonia Costa</div>
+                                <div class="h4">Sónia Costa</div>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
