Fixed dark-mode button for all pages

--- a/gallery.html
+++ b/gallery.html
@@ -40,9 +40,9 @@ subpage-template.html<!DOCTYPE html>
                         </li>
                         <li class="nav-item"><a class="nav-link" href="/orders.html">Encomendas</a></li>
                         <li class="nav-item"><a class="nav-link" href="/index.html#contact">Contactos</a></li>
+                        <li class="nav-item d-flex align-items-center"><button id="color-scheme" class="nav-link icon fa-solid fa-sun" onclick="toggle_light_mode()"></button></li>
                     </ul>
                 </div>
-                <div class="nav-item"><button id="color-scheme" class="nav-link icon fa-solid fa-sun" onclick="toggle_light_mode()"></button></div>
             </div>
         </nav>
         <div class="navbar-spacer"></div>
