Blog Template Added

--- a/events.html
+++ b/events.html
@@ -62,7 +62,7 @@
                         <div class="col-4 text-end text-muted mx-3"><i class="fa-solid fa-calendar-days mx-2"></i>dd/mm/yy</div>
                     </div>
                     <div class="row">
-                        <div class="text-justify col-lg-8 mb-4">
+                        <div class="text-justify col-lg-8">
                             <h2>TITLE</h2>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
@@ -70,12 +70,12 @@
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
                         </div>
-                        <div class="col-lg-4 col-8 mx-auto">
-                            <img class="img-fluid" src="assets/img/logos/logo.png" alt="logo">
+                        <div class="col-lg-4 col-12 mx-auto">
+                            <img class="img-fluid" src="assets/foods/bolos/1.jpg" alt="logo">
                         </div>
                     </div>
                 </div>
-                <div class="blog-item p-md-4 p-3">
+                <div class="blog-item p-md-4 p-3 mb-md-4 mb-3">
                     <div class="row d-flex align-items-center mb-3">
                         <img class="col-4 blog-avatar" src="assets/img/logos/logo.png" alt="costumer-portrait">
                         <div class="col">
@@ -84,7 +84,7 @@
                         <div class="col-4 text-end text-muted mx-3"><i class="fa-solid fa-calendar-days mx-2"></i>dd/mm/yy</div>
                     </div>
                     <div class="row">
-                        <div class="text-justify col-lg-8 mb-4">
+                        <div class="text-justify col-lg-8">
                             <h2>TITLE</h2>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
@@ -92,8 +92,8 @@
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
                         </div>
-                        <div class="col-lg-4 col-8 mx-auto">
-                            <img class="img-fluid" src="assets/img/logos/logo.png" alt="logo">
+                        <div class="col-lg-4 col-12 mx-auto">
+                            <img class="img-fluid" src="assets/foods/bolos/1.jpg" alt="logo">
                         </div>
                     </div>
                 </div>
