--- a/gallery.html
+++ b/gallery.html
@@ -1,4 +1,4 @@
-subpage-template.html<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt">
     <head>
         <meta charset="utf-8" />
@@ -28,7 +28,7 @@ subpage-template.html<!DOCTYPE html>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="/index.html#about">Sobre Nós</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/index.html">Sobre Nós</a></li>
                         <li class="nav-item"><a class="nav-link" href="/index.html#portfolio">Produtos</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle">Blog</a>
@@ -49,88 +49,136 @@ subpage-template.html<!DOCTYPE html>
         <!-- gallery-->
         <section class="page-section" id="gallery">
             <div class="container">
-              <div class="row">
-                <div class="col-md-3" style="position: fixed">
+                <div class="text">
                     <h2 class="section-heading text-uppercase">Galeria</h2>
-                    <h3 class="section-subheading text-muted">Aqui encontra uma coletânea de várias</br>fotos dos nossos produtos.</h3>
-                    <h5 style="text-align: left">Categorias</h5>
-                  </br>
-                  <ul class="nav nav-pills flex-column">
-                      <li class="nav-item">
-                        <a class="nav-link" href="#category1">Categoria 1</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#category2">Categoria 2</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#category3">Categoria 3</a>
-                      </li>
-                    </ul>
+                    <h3 class="section-subheading text-muted">Aqui encontra uma coletânea de várias fotos dos nossos produtos</h3>
                 </div>
+                <div id="carousel-pao" class="carousel slide mb-5" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner" id="pao">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="assets/foods/pao/1.jpg" alt="First slide">
+                        </div>
 
-              <div class="col-md-9" style="margin-left: 350px; margin-top: 150px;">
-                <h5 style="text-align: center">Imagens</h5>
-                </br>
-                <h6 class="sector" id="category1">Categoria 1</h6>
-                </br>
-                <div class="gallerygrid">
-                  <div class="imagebox">
-                    <img class="image" src="https://picsum.photos/222/200">
-                  </div>
-                  <div class="imagebox">
-                    <img class="image" src="https://picsum.photos/200/200">
-                  </div>
-                  <div class="imagebox">
-                    <img class="image" src="https://picsum.photos/200/150">
-                  </div>
-                  <div class="imagebox">
-                    <img class="image" src="https://picsum.photos/221/200">
-                  </div>
-                  <div class="imagebox">
-                    <img class="image" src="https://picsum.photos/200/230">
-                  </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
                 </div>
-                </br>
-                <h6 class="sector" id="category2">Categoria 2</h6>
-                </br>
-                <div class="gallerygrid">
-                  <div class="imagebox">
-                    <img class="image" src="https://picsum.photos/222/200">
-                  </div>
-                  <div class="imagebox">
-                    <img class="image" src="https://picsum.photos/200/200">
-                  </div>
-                  <div class="imagebox">
-                    <img class="image" src="https://picsum.photos/200/150">
-                  </div>
-                  <div class="imagebox">
-                    <img class="image" src="https://picsum.photos/221/200">
-                  </div>
-                  <div class="imagebox">
-                    <img class="image" src="https://picsum.photos/200/230">
-                  </div>
+                <div id="carousel-salgados" class="carousel slide mb-5" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner" id="salgados">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="assets/foods/salgados/1.jpg" alt="First slide">
+                        </div>
+
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
                 </div>
-                </br>
-                <h6 class="sector" id="category3">Categoria 3</h6>
-                </br>
-                <div class="gallerygrid">
-                  <div class="imagebox">
-                    <img class="image" src="https://picsum.photos/222/200">
-                  </div>
-                  <div class="imagebox">
-                    <img class="image" src="https://picsum.photos/200/200">
-                  </div>
-                  <div class="imagebox">
-                    <img class="image" src="https://picsum.photos/200/150">
-                  </div>
-                  <div class="imagebox">
-                    <img class="image" src="https://picsum.photos/221/200">
-                  </div>
-                  <div class="imagebox">
-                    <img class="image" src="https://picsum.photos/200/230">
-                  </div>
+                <div id="carousel-bolos" class="carousel slide mb-5" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner" id="bolos">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="assets/foods/bolos/1.jpg" alt="First slide">
+                        </div>
+
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
                 </div>
-              </div>    
+                <div id="carousel-biscoitos" class="carousel slide mb-5" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner" id="biscoitos">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="assets/foods/biscoitos/1.jpg" alt="First slide">
+                        </div>
+
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+                <div id="carousel-compotas_manteigas" class="carousel slide mb-5" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner" id="compotas_manteigas">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="assets/foods/compotas_manteigas/1.jpg" alt="First slide">
+                        </div>
+
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+                <div id="carousel-veggiecinios" class="carousel slide mb-5" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner" id="veggiecinios">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="assets/foods/veggiecinios/1.jpg" alt="First slide">
+                        </div>
+
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
             </div>
         </section>
         <!-- Footer-->
@@ -154,5 +202,6 @@ subpage-template.html<!DOCTYPE html>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/custom-scripts.js"></script>
+        <script src="js/gallery-scripts.js"></script>
     </body>
 </html>
