--- a/gallery.html
+++ b/gallery.html
@@ -53,102 +53,87 @@
                     <h2 class="section-heading text-uppercase">Galeria</h2>
                     <h3 class="section-subheading text-muted">Aqui encontra uma coletânea de várias fotos dos nossos produtos</h3>
                 </div>
-                <div id="carousel-pao" class="carousel slide mb-5" data-ride="carousel">
-                    <div class="carousel-inner" id="pao">
-                        <div class="carousel-item active">
-                            <img class="d-block w-100" src="assets/foods/pao/1.jpg" alt="First slide">
+                <div class="col-lg-10 mx-auto">
+                    <div id="c-pao" class="carousel slide mb-4" data-bs-ride="carousel">
+                        <div class="carousel-inner" id="pao">
+                            <div class="carousel-item active" data-bs-interval="2000">
+                                <img src="assets/foods/pao/1.jpg" alt="Imagem 1" class="d-block w-100">
+                            </div>
                         </div>
-
+                        <button class="carousel-control-prev" type="button" data-bs-target="#c-pao" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon"></span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#c-pao" data-bs-slide="next">
+                            <span class="carousel-control-next-icon"></span>
+                        </button>
                     </div>
-                    <a class="carousel-control-prev" href="#carousel-pao" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carousel-pao" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
-                <div id="carousel-salgados" class="carousel slide mb-5" data-ride="carousel">
-                    <div class="carousel-inner" id="salgados">
-                        <div class="carousel-item active">
-                            <img class="d-block w-100" src="assets/foods/salgados/1.jpg" alt="First slide">
+                    <div id="c-salgados" class="carousel slide mb-4" data-bs-ride="carousel">
+                        <div class="carousel-inner" id="salgados">
+                            <div class="carousel-item active" data-bs-interval="2000">
+                                <img src="assets/foods/salgados/1.jpg" alt="Imagem 1" class="d-block w-100">
+                            </div>
                         </div>
-
+                        <button class="carousel-control-prev" type="button" data-bs-target="#c-salgados" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon"></span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#c-salgados" data-bs-slide="next">
+                            <span class="carousel-control-next-icon"></span>
+                        </button>
                     </div>
-                    <a class="carousel-control-prev" href="#carousel-salgados" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carousel-salgados" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
-                <div id="carousel-bolos" class="carousel slide mb-5" data-ride="carousel">
-                    <div class="carousel-inner" id="bolos">
-                        <div class="carousel-item active">
-                            <img class="d-block w-100" src="assets/foods/bolos/1.jpg" alt="First slide">
+                    <div id="c-bolos" class="carousel slide mb-4" data-bs-ride="carousel">
+                        <div class="carousel-inner" id="bolos">
+                            <div class="carousel-item active" data-bs-interval="2000">
+                                <img src="assets/foods/bolos/1.jpg" alt="Imagem 1" class="d-block w-100">
+                            </div>
                         </div>
-
+                        <button class="carousel-control-prev" type="button" data-bs-target="#c-bolos" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon"></span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#c-bolos" data-bs-slide="next">
+                            <span class="carousel-control-next-icon"></span>
+                        </button>
                     </div>
-                    <a class="carousel-control-prev" href="#carousel-bolos" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carousel-bolos" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
-                <div id="carousel-biscoitos" class="carousel slide mb-5" data-ride="carousel">
-                    <div class="carousel-inner" id="biscoitos">
-                        <div class="carousel-item active">
-                            <img class="d-block w-100" src="assets/foods/biscoitos/1.jpg" alt="First slide">
+                    <div id="c-biscoitos" class="carousel slide mb-4" data-bs-ride="carousel">
+                        <div class="carousel-inner" id="biscoitos">
+                            <div class="carousel-item active" data-bs-interval="2000">
+                                <img src="assets/foods/biscoitos/1.jpg" alt="Imagem 1" class="d-block w-100">
+                            </div>
                         </div>
-
+                        <button class="carousel-control-prev" type="button" data-bs-target="#c-biscoitos" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon"></span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#c-biscoitos" data-bs-slide="next">
+                            <span class="carousel-control-next-icon"></span>
+                        </button>
                     </div>
-                    <a class="carousel-control-prev" href="#carousel-biscoitos" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carousel-biscoitos" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
-                <div id="carousel-compotas_manteigas" class="carousel slide mb-5" data-ride="carousel">
-                    <div class="carousel-inner" id="compotas_manteigas">
-                        <div class="carousel-item active">
-                            <img class="d-block w-100" src="assets/foods/compotas_manteigas/1.jpg" alt="First slide">
+                    <div id="c-compotas_manteigas" class="carousel slide mb-4" data-bs-ride="carousel">
+                        <div class="carousel-inner" id="compotas_manteigas">
+                            <div class="carousel-item active" data-bs-interval="2000">
+                                <img src="assets/foods/compotas_manteigas/1.jpg" alt="Imagem 1" class="d-block w-100">
+                            </div>
                         </div>
-
+                        <button class="carousel-control-prev" type="button" data-bs-target="#c-compotas_manteigas" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon"></span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#c-compotas_manteigas" data-bs-slide="next">
+                            <span class="carousel-control-next-icon"></span>
+                        </button>
                     </div>
-                    <a class="carousel-control-prev" href="#carousel-compotas_manteigas" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carousel-compotas_manteigas" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
-                <div id="carousel-veggiecinios" class="carousel slide mb-5" data-ride="carousel">
-                    <div class="carousel-inner" id="veggiecinios">
-                        <div class="carousel-item active">
-                            <img class="d-block w-100" src="assets/foods/veggiecinios/1.jpg" alt="First slide">
+                    <div id="c-veggiecinios" class="carousel slide mb-4" data-bs-ride="carousel">
+                        <div class="carousel-inner" id="veggiecinios">
+                            <div class="carousel-item active" data-bs-interval="2000">
+                                <img src="assets/foods/veggiecinios/1.jpg" alt="Imagem 1" class="d-block w-100">
+                            </div>
                         </div>
-
+                        <button class="carousel-control-prev" type="button" data-bs-target="#c-veggiecinios" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon"></span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#c-veggiecinios" data-bs-slide="next">
+                            <span class="carousel-control-next-icon"></span>
+                        </button>
                     </div>
-                    <a class="carousel-control-prev" href="#carousel-veggiecinios" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carousel-veggiecinios" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
                 </div>
+
             </div>
         </section>
         <!-- Footer-->
